# stuntfree-ml-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  hello.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: example.py  stunting.py
app/controller/: health_check.py  image_detection.py  predict_nutrition.py  predict_pregnant_stunting.py  predict_stunting.py
app/core/: config.py  container.py  database.py  exceptions.py  middleware.py  server.py
app/proto/: ml_services.proto  service1.proto
app/public/: knn_environment_status_model.pkl
app/schema/: response_schema.py
app/service/: base_service.py  stunting_service.py
app/util/: query_builder.py  response_format.py
