[project]
name = "stuntfree-ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=2.19.0",
    "grpcio>=1.68.1",
    "numpy<2.0",
    "pydantic-settings>=2.6.1",
    "tensorflow>=2.18.0",
]
